Changed customerList and restaurantList to use ArrayList from now on.